fixing .max-counter-wrapper to align it to the right

--- a/src/App.css
+++ b/src/App.css
@@ -126,9 +126,9 @@ textarea {
 }
 
 .max-counter-wrapper {
-  width: 100;
+  width: 100%;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   font-size: 12px;
 
   & span {
